--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "babel-eslint": "10.0.2",
     "babel-loader": "8.0.6",
     "css-loader": "3.1.0",
+    "es6-promise": "4.2.8",
+    "html-webpack-plugin": "3.2.0",
+    "lodash": "4.17.15",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "style-loader": "0.23.1",
     "webpack": "4.39.1",
-    "webpack-cli": "3.3.2"
+    "webpack-cli": "3.3.2",
+    "webpack-dev-server": "3.7.2",
+    "webpack-pwa-manifest": "4.0.0"
   }
 }
 
